--- a/index.html
+++ b/index.html
@@ -12,23 +12,30 @@
 <body>
     <div class="main">
         <input type="checkbox" id="chk" aria-hidden="true">
-        
+
         <div class="signup">
             <form>
                 <label for="chk" aria-hidden="true">Sign Up</label>
                 <input type="text" name="txt" placeholder="User name" required="">
                 <input type="email" name="email" placeholder="Email" required="">
                 <input type="password" name="pswd" placeholder="Password" required="">
+
                 <Button>Sign Up</Button>
+
             </form>
         </div>
 
         <div class="login">
             <form>
                 <label for="chk" aria-hidden="true">Login</label>
-                <input type="email" name="email" placeholder="Email" required="">
-                <input type="password" name="pswd" placeholder="Password" required="">
-                <Button>Login</Button>
+                <input type="email" name="email" placeholder="Email">
+                <input type="password" name="pswd" placeholder="Password">
+
+                <a href="principal.html">
+                   <center>Log in</center>
+                </a>
+
+
             </form>
         </div>
 
